<resources>
    <string name="app_name">Minimal Blue Bikes Philly</string>
    <string name="app_title_action_bar">Minimal Blue Bikes Philly</string>
    <string name="string_versionText">v1.2</string>

    <string name="string_lastRefreshInitial">(No Data Read)</string>
    <string name="string_nohint">(No Hint Available)</string>
    <string name="string_bikes_available">Bikes Available</string>
    <string name="string_bike_available">Bike Available</string>
    <string name="string_ebikes_available">E-Bikes Available</string>
    <string name="string_ebike_available">E-Bike Available</string>
    <string name="string_docks_available">Docks Available</string>
    <string name="string_dock_available">Dock Available</string>
    <string name="string_unable_load">Unable to Load Stations</string>
    <string name="string_loading">Loading Station List&#8230;</string>



    <string name="action_settings">Settings</string>
    <string name="action_statistics">System Statistics</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_sort_name">Sort by Name</string>
    <string name="action_sort_bikes">Sort by Bikes</string>
    <string name="action_sort_docks">Sort by Docks</string>
    <string name="action_sort_ebikes">Sort by E-Bikes</string>
    <string name="action_sort_distance">Sort by Distance</string>
    <string name="action_sort_direction">Sort by Direction</string>
    <string name="action_filter_favorites">Show Favorite Stations</string>
    <string name="action_filter_all">Show All Stations</string>
    <string name="constants_indegoAPIURL">https://api.phila.gov/bike-share-stations/v1</string>

    <!-- PREFERENCES -->
    <string name="preference_sort_type_title">Default Station List Sort</string>
    <string name="preference_sort_type_default">DISTANCE</string>
    <string name="preference_sort_type_summary">Sort Type at App Startup</string>
    <string-array name="preference_sort_types_values" >
        <item>DISTANCE</item>
        <item>BIKES</item>
        <item>DOCKS</item>
        <item>NAME</item>
        <item>DIRECTION</item>
        <item>EBIKES</item>
    </string-array>
    <string-array name="preference_sort_types_strings" >
        <item>Distance from Current Station</item>
        <item>Bikes available</item>
        <item>Docks available</item>
        <item>Station Name</item>
        <item>Direction from Current Station</item>
        <item>E-Bikes available</item>
    </string-array>

    <string name="preference_stale_data_title">Stale Data Warning Time</string>
    <string name="preference_stale_data_default">180</string>
    <string name="preference_stale_data_summary">Time before stale station data warning (yellow); 2x time before alert (red).</string>
    <string-array name="preference_stale_data_values">
        <item>OFF</item>
        <item>60</item>
        <item>180</item>
        <item>300</item>
        <item>600</item>
    </string-array>
    <string-array name="preference_stale_data_values_debug" >
        <item>OFF</item>
        <item>10</item>
        <item>20</item>
        <item>60</item>
        <item>600</item>
    </string-array>
    <string-array name="preference_stale_data_strings" >
        <item>No Warnings</item>
        <item>1 minute</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
    </string-array>


    <string name="preference_stale_refresh_title">Refresh Stale Data Time</string>
    <string name="preference_stale_refresh_default">300</string>
    <string name="preference_stale_refresh_summary">Time before stale station is refreshed.</string>
    <string-array name="preference_stale_refresh_values">
        <item>OFF</item>
        <item>60</item>
        <item>120</item>
        <item>300</item>
        <item>600</item>
        <item>1800</item>
    </string-array>
    <string-array name="preference_stale_refresh_values_debug" >
        <item>OFF</item>
        <item>10</item>
        <item>20</item>
        <item>60</item>
        <item>120</item>
        <item>600</item>
    </string-array>
    <string-array name="preference_stale_refresh_strings" >
        <item>Auto Refresh OFF</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
    </string-array>


    <string name="preference_home_station_title">Startup Station</string>
    <string name="preference_home_station_default">HOME</string>
    <string name="preference_home_station_summary">At App startup use Home Station or most recent Current Station</string>
    <string-array name="preference_home_station_values" >
        <item>HOME</item>
        <item>CURRENT</item>
    </string-array>
    <string-array name="preference_home_station_strings" >
        <item>Home Station</item>
        <item>Current Station (most recent)</item>
    </string-array>
    <!-- ACTIVITY TITLES -->
    <string name="title_activity_station_detail">Station Detail</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_statistics">System Statistics</string>




</resources>
