<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".StationListActivity">
    <item android:id="@+id/action_refresh" android:title="@string/action_refresh"
        android:orderInCategory="105" app:showAsAction="ifRoom"
        android:icon="@drawable/ic_refresh_white_24dp"/>
    <item android:id="@+id/menu_sort" android:title="Sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom">

    <menu>
    <item android:id="@+id/action_sort_name" android:title="@string/action_sort_name"
        android:orderInCategory="111" app:showAsAction="never" />
    <item android:id="@+id/action_sort_bikes" android:title="@string/action_sort_bikes"
        android:orderInCategory="112" app:showAsAction="never" />
    <item android:id="@+id/action_sort_docks" android:title="@string/action_sort_docks"
        android:orderInCategory="113" app:showAsAction="never" />
    <item android:id="@+id/action_sort_distance" android:title="@string/action_sort_distance"
        android:orderInCategory="110" app:showAsAction="never" />
    <item android:id="@+id/action_sort_direction" android:title="@string/action_sort_direction"
        android:orderInCategory="114" app:showAsAction="never" />
  </menu></item>
    <item android:id="@+id/action_filter_favorites" android:title="@string/action_filter_favorites"
        android:orderInCategory="125" app:showAsAction="ifRoom"
        android:icon="@drawable/ic_stars_white_24dp"/>
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
    android:orderInCategory="130" app:showAsAction="never" />

</menu>
